# Pipes

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
agents/: README.md  builder.py  deploy.sh  plan_evaluator.py  pyproject.toml  requirements.txt  sandbox.py  schemas.py  system_prompt.md  tools.py
agents/eval/: __init__.py  baseline_graphs.json  prompts.py  run_eval.py  test_run_eval.py
agents/tests/: test_builder.py  test_end_to_end.py  test_tools.py
agents/tests/fixtures/: mock_request.json
convex/: app.ts  schema.ts
convex/_generated/: api.ts  server.ts
docs/: accessibility.md  admin_support.md  agent-contract.md  agent-product.md  agent_builder.md  architecture.md  audience.md  beta_operations.md  builder-eval.md  copy-audit.md  design_system.md  domain_model.md  enterprise_trust.md  errors.md  growth_model.md  launch_checklist.md  local_development.md  magic-moment.md  mcp.md  premise-verification.md  product_overview.md  product_signals.md  protocol.md  qa_checklist.md
docs/openapi/: protocol.json
examples/protocol/: client.py  client.ts
public/: sample_system_export.json
src/app/: layout.tsx  not-found.tsx
src/components/: AppShell.tsx  AppShellClient.tsx  MarketingShell.tsx  NavLinks.tsx  Providers.tsx  ThemeToggle.tsx
src/hooks/: usePresence.ts
src/styles/: globals.css
tests/e2e/: editor.spec.ts  home.spec.ts  realtime.spec.ts  system-create.spec.ts
tests/unit/: admin-access.test.ts  (+54 more)
(+272 files in other folders)
