[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipes-agent"
version = "0.1.0"
description = "The Modal-sandboxed OpenAI Agents SDK runner that builds Pipes graphs from one sentence."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Pipes" }]
dependencies = [
    "modal>=0.66",
    "openai-agents>=0.0.18",
    "openai>=1.40.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "fastapi>=0.115",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
packages = ["agents"]
package-dir = { "agents" = "." }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
